--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -51,5 +51,12 @@
 "ERR": "Ошибка",
 "ERR_TEXT": "Простите такой страницы нет на нашем сервере или вы не можете на нее попасть из за отсутствия прав, перейдите на ", 
 "ERR_GENERAL_LINK":  "главную страницу",
-"ERR_RIGHT_MENU": "или воспользуйтесь меню справа"
+"ERR_RIGHT_MENU": "или воспользуйтесь меню справа",
+
+"EMPTY": "Блок не заполнен",
+"ADD_ABOUT_TEXT": "Добавить текст",
+"OR": "или",
+"ADD_ABOUT_IMAGE": "Добавить изображение",
+"SAVE": "Сохранить",
+"PHONE_RULES": "Перечислить телефоны и адресса разделяя знаком ';' без пробелов между номерами или адрессами."
 }
