--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -58,5 +58,29 @@
 "OR": "или",
 "ADD_ABOUT_IMAGE": "Добавить изображение",
 "SAVE": "Сохранить",
-"PHONE_RULES": "Перечислить телефоны и адресса разделяя знаком ';' без пробелов между номерами или адрессами."
+"PHONE_RULES": "Перечислить телефоны и адресса разделяя знаком ';' без пробелов между номерами или адрессами.",
+
+"ADRESS_RU": "Адрес на русском языке",
+"ADRESS_EN": "Адрес на английском языке",
+
+"DESCRIPTION_RU": "Описание на русском",
+"DESCRIPTION_EN": "Описание на английском",
+
+"CAREER": "Должность",
+
+"NAME_RU": "Имя на русском",
+"NAME_EN": "Имя на английском",
+
+"NAME_OF_PROJECT": "Название проекта",
+"NAME_OF_PROJECT_RU": "Название проекта на русском",
+"NAME_OF_PROJECT_EN": "Название проекта на английском",
+"PREVIEW": "Превью",
+"ACTIONS": "Действия",
+"ADD_WORK": "Добавить работу",
+"TECHNOLOGY": "Технологии",
+"FEAUTURES_EN": "Особенности на русском языке",
+"FEAUTURES_RU": "Особенности на английском языке",
+"ADD_GALLERY": "Добавить галерею",
+"MOVE_FILE": "Перетащить файл сюда"
+
 }
