--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -78,9 +78,15 @@
 "ACTIONS": "Действия",
 "ADD_WORK": "Добавить работу",
 "TECHNOLOGY": "Технологии",
+"FEAUTURES": "Особенности",
 "FEAUTURES_EN": "Особенности на русском языке",
 "FEAUTURES_RU": "Особенности на английском языке",
 "ADD_GALLERY": "Добавить галерею",
-"MOVE_FILE": "Перетащить файл сюда"
+"MOVE_FILE": "Перетащить файл сюда",
 
+"ERROR_LOGIN": "Не верно введен логин или пароль",
+"LOGIN": "Логин",
+"PWD": "Пароль",
+"ENTER": "Вход",
+"LANG": "Язык"
 }
