add art gallery

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,6 +5,8 @@
 "TEAM": "Team",
 "CONTACT": "Contact",
 "REQUEST": "Submit your application",
+"ART": "Art and Graphic Design",
+"ART_GALLERY": "Gallery of art",
 "MORE": "More",
 "CLASSIC": "Modern classic",
 "WOODS": "Wooden furniture",
