--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -6,6 +6,8 @@
 "CONTACT": "Контакты",
 "REQUEST": "Оставить заявку",
 "MORE": "Подробнее",
+"ART": "Исскуство и графический дизайн",
+"ART_GALLERY": "Галерея исскуства",
 "CLASSIC": "Современная классика",
 "WOODS": "Деревянная мебель",
 "EMPIRE": "Империя комфорта",
