--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -14,6 +14,7 @@
 "FLORA": "Цветочная роскошь",
 "SERVICES": "Услуги",
 "SERVICES_TEXT": "Мы понимаем, ваша история и желания уникальны. Именно поэтому наши микро-команды и решения, индивидуально создаются для каждого из наших клиентов",
+"ART_TEXT": "Мы предлагаем услуги по дизайну, оформлению, предпечатной подготовке всего, что только можно напечатать - календарей, постеров, рекламных блоков в журналы, буклетов, визиток и многих других материалов рекламного характера.",
 "BRAND": "Брендинг",
 "BRAND_TEXT": "Превратим ваш бренд в один из самых узнаваемых во всем мире",
 "WEB_DESIGN": "Веб-дизайн",
