--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,4 +1,5 @@
 {
+"TEXT_TITLE": "Premier Graphic, Web Design & Web Development - Extraordinary Agency 4SIDE",
 "GENERAL": "General",
 "ABOUT": "About",
 "PORTFOLIO": "Portfolio",
