--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -1,4 +1,5 @@
 {
+"TEXT_TITLE": "Исскуство графики, веб дизайна и разработки - Экстравагантное Агенство 4SIDE",
 "GENERAL": "Главная",
 "ABOUT": "О компании",
 "PORTFOLIO": "Портфолио",
