--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,5 @@
 {
-"TEXT_TITLE": "Premier Graphic, Web Design & Web Development - Extraordinary Agency 4SIDE",
+"TEXT_TITLE": "4SIDE Extraordinary Agency - Premier Graphic, Web Design & Web Development",
 "GENERAL": "General",
 "ABOUT": "About",
 "PORTFOLIO": "Portfolio",
