--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -1,5 +1,5 @@
 {
-"TEXT_TITLE": "Исскуство графики, веб дизайна и разработки - Экстравагантное Агенство 4SIDE",
+"TEXT_TITLE": "4SIDE Экстравагантное Агенство - Исскуство графики, веб дизайна и разработки",
 "GENERAL": "Главная",
 "ABOUT": "О компании",
 "PORTFOLIO": "Портфолио",
