--- a/i18n/en.json
+++ b/i18n/en.json
@@ -28,11 +28,11 @@
 "BUSSINES_TEXT": "Development of accounting and control systems on the basis of individual needs",
 "WORKFLOW": "Workflow",
 "BRAINSTORM":"Brainstorming",
-"BRAINSTORM_TEXT": "We use brainstorming as a general procedure, with which we have always fresh, absolutely bold, individual and creative ideas for your business",
+"BRAINSTORM_TEXT": "In our agency 4SIDE use 'brainstorming' 'as the main method by which we get always fresh, absolutely bold, individual and creative ideas for your business",
 "PLANNING": "planning",
 "PLANNING_TEXT": "Planning takes place on the basis of the selected ideas, created a prototype of the product, thought out architecture of the application and database, to create a functional solution",
 "DESIGN": "Design",
-"DESIGN_TEXT": "Our designers embody all ideas into great-looking interface, unparalleled brand and comfortable and at the same time a modern CRM system for business",
+"DESIGN_TEXT": "Designers Agency 4SIDE embody all the ideas in great-looking interface, unparalleled brand and comfortable and at the same time modern CRM business system",
 "DEVELOPMENT": "Development",
 "DEVELOPMENT_TEXT": "In the process of design, developers are already building database architecture is configured freymverki selected to implement the idea, creating abstract patterns.",
 "UPDATES": "Subscribe to feed",
