--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -28,11 +28,11 @@
 "BUSSINES_TEXT": "Построение систем учета и управления исходя из индивидуальных потребностей",
 "WORKFLOW": "Процесс работы",
 "BRAINSTORM": "Мозговой штурм",
-"BRAINSTORM_TEXT": "Мы используем мозговой штурм как основную методику, с помощью которой мы получаем всегда свежие, абсолютно смелые, индивидуальные и креативные идеи для вашего бизнеса",
+"BRAINSTORM_TEXT": "В нашем Агенстве 4SIDE используеться 'мозговой штурм'' как основная методика, с помощью которой мы получаем всегда свежие, абсолютно смелые, индивидуальные и креативные идеи для вашего бизнеса",
 "PLANNING": "планирование",
 "PLANNING_TEXT": "Планирование происходит на основе выбранной идеи,создается прототип продукта, продумывается архитектура приложения и баз данных, для создания функционального решения",
 "DESIGN": "Дизайн",
-"DESIGN_TEXT": "Наши дизайнеры воплощают все идеи в великолепно-красивый интерфейс, непревзойденный бренд или удобную и в тоже время современную СRM систему для бизнеса",
+"DESIGN_TEXT": "Дизайнеры Агенства 4SIDE воплощают все идеи в великолепно-красивый интерфейс, непревзойденный бренд или удобную и в тоже время современную СRM систему для бизнеса",
 "DEVELOPMENT": "Разработка",
 "DEVELOPMENT_TEXT": "В процессе дизайна, разработчики уже строят архитектуру баз данных, конфигурируют выбранные фреймверки для воплощения идеи, создают абстрактные шаблоны.",
 "UPDATES": "Подписаться на обновления",
