--- a/i18n/en.json
+++ b/i18n/en.json
@@ -14,7 +14,7 @@
 "EMPIRE": "Empire comfort",
 "FLORA": "Floral luxury",
 "SERVICES": "Services",
-"SERVICES_TEXT": "We understand your history and unique desires. That is why our team and micro-solutions, individually created for each of our clients",
+"SERVICES_TEXT": "4SIDE Agency understand your history and unique desires. That is why our team and micro-solutions, individually created for each of our clients",
 "ART_TEXT": "We offer design services, design, pre-press and all that only you can print - calendars, posters, brochures, business cards and many other promotional material.",
 "BRAND": "Branding",
 "BRAND_TEXT": "Turn your brand into one of the most recognizable in the world",
