add schema and alt for img

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,6 @@
 {
 "TEXT_TITLE": "4SIDE Extraordinary Agency - Premier Graphic, Web Design & Web Development",
+"TEXT_TITLE_ALT_EMPTY": "4SIDE Extraordinary Agency Design & Development",
 "GENERAL": "General",
 "ABOUT": "About",
 "PORTFOLIO": "Portfolio",
