--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -1,5 +1,6 @@
 {
 "TEXT_TITLE": "4SIDE Экстравагантное Агенство - Исскуство графики, веб дизайна и разработки",
+"TEXT_TITLE_ALT_EMPTY": "4SIDE Экстравагантное Агенство - Дизайн и  разработка",
 "GENERAL": "Главная",
 "ABOUT": "О компании",
 "PORTFOLIO": "Портфолио",
