add 3d and other

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,13 +3,18 @@
 "TEXT_TITLE_ALT_EMPTY": "4SIDE Extraordinary Agency Design & Development",
 "GENERAL": "General",
 "ABOUT": "About",
-"PORTFOLIO": "Portfolio",
+"PORTFOLIO": "Portfolio web",
 "TEAM": "Team",
+"INTERIOR": "Ex & Interiors",
 "CONTACT": "Contact",
 "REQUEST": "Submit your application",
 "ART": "Art and Graphic Design",
+"ART_MENU": "Art & Graphic",
 "ART_GALLERY": "Gallery of art",
 "MORE": "More",
+"CATEGORY": "Category",
+"CATEGORY_INTERIOR": "Interiors",
+"CATEGORY_ART": "Art Graphics",
 "CLASSIC": "Modern classic",
 "WOODS": "Wooden furniture",
 "EMPIRE": "Empire comfort",
@@ -52,6 +57,7 @@
 "PORTFOLIO_TEXT": "We have created more than 500 different projects are presented the most interesting in the past few years.",
 "TEAM_TEXT": "A consultation with a broad asset of our team is an interesting experiment aimed at the realization of your ideas.",
 "CONTACT_TEXT": "Call any time convenient for you, and our support team will help you solve any problems on the site and beyond.",
+"INTERIOR_TITLE": "Modeling and design of interiors and exteriors",
 
 "ERR": "Error",
 "ERR_TEXT": "I'm sorry this page is not on our server or you can not get to it because of the lack of rights, go to ",
