--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -3,12 +3,17 @@
 "TEXT_TITLE_ALT_EMPTY": "4SIDE Экстравагантное Агенство - Дизайн и  разработка",
 "GENERAL": "Главная",
 "ABOUT": "О компании",
-"PORTFOLIO": "Портфолио",
+"PORTFOLIO": "Портфолио веб",
 "TEAM": "Команда",
 "CONTACT": "Контакты",
+"INTERIOR": "Экс и Интерьеры",
 "REQUEST": "Оставить заявку",
+"CATEGORY": "Категория",
+"CATEGORY_INTERIOR": "Интерьеры",
+"CATEGORY_ART": "Арт графика",
 "MORE": "Подробнее",
 "ART": "Исскуство и графический дизайн",
+"ART_MENU": "Арт и графика",
 "ART_GALLERY": "Галерея исскуства",
 "CLASSIC": "Современная классика",
 "WOODS": "Деревянная мебель",
@@ -52,6 +57,7 @@
 "PORTFOLIO_TEXT": "Мы создали более 500 различных проектов, здесь представлены самые интересные за последние несколько лет.",
 "TEAM_TEXT": "Консультация с широким активом нашей команды, представляет собой интересный эксперимент направленый на реализацию ваших идей.",
 "CONTACT_TEXT": "Звоните в любое удобное для вас время, и наша служба поддержки вам поможет решить любые проблемы на сайте и не только.",
+"INTERIOR_TITLE": "Моделирование и дизайн интерьеров и экстерьеров",
 
 "ERR": "Ошибка",
 "ERR_TEXT": "Простите такой страницы нет на нашем сервере или вы не можете на нее попасть из за отсутствия прав, перейдите на ", 
