--- a/i18n/en.json
+++ b/i18n/en.json
@@ -62,7 +62,7 @@
 "PORTFOLIO_TEXT": "What do you closer in spirit: magic permeated classic or creative style, with its extravagance, originality and desire to win? We can bring all sorts of options in the reality! Just tell me what you would like to see!",
 "TEAM_TEXT": "Our team - people who share not only a professional necessity. It partners who have similar beliefs. In short friends, who want to make the world better!",
 "CONTACT_TEXT": "Call any time convenient for you, and our support team will help you solve any problems on the site and beyond.",
-"INTERIOR_TITLE": "Modeling and design of interiors and exteriors",
+"INTERIOR_TITLE": "Modeling, design of interiors and exteriors",
 
 
 "INTERIOR_TEXT": "3D modeling - ultra popular trend all business processes. This approach allows for a lot of experimentation, without wasting manpower and resources to the phased implementation of the project in reality.",
