--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -67,7 +67,7 @@
 "TEAM_TEXT": "Наша команда – это люди, которых объединяет не только профессиональная необходимость. Это партнёры, у которых схожие убеждения. Одним словом друзья, которые стремятся сделать мир лучше!",
 
 "CONTACT_TEXT": "Звоните в любое удобное для вас время, и наша служба поддержки вам поможет решить любые проблемы на сайте и не только.",
-"INTERIOR_TITLE": "Моделирование и дизайн интерьеров и экстерьеров",
+"INTERIOR_TITLE": "Моделирование, дизайн интерьеров и экстерьеров",
 "INTERIOR_TEXT": "3D моделирование – ультра популярное направление любых бизнес процессов. Этот подход позволяет проводить множество экспериментов, не затрачивая сил и средств на поэтапную реализацию проекта в реальности.",
 
 
