--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,4 +1,6 @@
 {
+"SEO_DESCRIPTION_META": "4SIDE Exclusively complex approach to the creation of solutions for business websites and applications on platforms Yii, Node.js",
+"SEO_TITLE_META": "business solutions, applications, graphic design, illustration, website, corporate website, web studio, website design, website development, Yii, Node.js, React, Angular",
 "SEO_TEXT_TITLE": "The 4SIDE different from others?",
 "SEO_TEXT_P1": "Specialists of our team - a great sense of taste you specify the direction of movement - we are implementing a specific task in practice We have no sense of shame - because our works are distinguished by quality designers 4side not driven into the frame - so our creativity -.. this inspiration and freedom. ",
 "SEO_TEXT_P2": "With us, your projects are successful you can see for yourself the result of enjoying our work you understand:... The money paid is not in vain end result - the best of what was possible, and 4SIDE team takes the position that there is nothing not possible !",
