--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -1,4 +1,6 @@
 {
+"SEO_DESCRIPTION_META": "4SIDE Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Node.js",
+"SEO_TITLE_META": "бизнес решения, приложения, графический дизайн, иллюстрации, создание сайтов, корпоративный сайт, веб студия, дизайн сайта, разработка сайта, Yii, Node.js, React, Angular",
 "SEO_TEXT_TITLE": "Чем 4SIDE отличается от других?",
 "SEO_TEXT_P1": "У специалистов нашей команды – прекрасное чувство вкуса. Вы задаёте направление движения – мы реализуем конкретную задачу на практике. У нас нет чувства стыда – потому что наши работы отличаются качеством. Дизайнеры 4side не загнаны в рамки – поэтому наше творчество – это вдохновение и свобода.",
 "SEO_TEXT_P2": "С нами ваши проекты работают успешно. Вы сами видите результат, наслаждаясь нашей работой. Вы понимаете: деньги оплачены не зря. Конечный результат – лучшее из того, что было возможным, а команда 4SIDE придерживается позиции что нет нечего не возможного!",
